# E-commerce-Backend

./: .gitignore  Procfile  RAILWAY_DEPLOYMENT.md  README.md  check_urls.py  docker-compose.yml  gunicorn.conf.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  start_server.py
requirements/: base.txt  development.txt  production.txt
src/: storage_backends.py  urls.py
src/apps/accounts/: admin.py  apps.py  models.py  signals.py
src/apps/accounts/api/: serializers.py  urls.py  views.py
src/apps/accounts/migrations/: 0002_alter_customuser_id_address_userpreferences_and_more.py  0003_alter_userpreferences_options_and_more.py
src/apps/cart/: admin.py  apps.py  models.py  signals.py
src/apps/cart/api/: serializers.py  urls.py  views.py
src/apps/cart/migrations/: 0001_initial.py
src/apps/newsletter/migrations/: 0002_alter_subscriber_id.py
src/apps/orders/: admin.py  apps.py  models.py  signals.py
src/apps/orders/api/: admin_urls.py  admin_views.py  serializers.py  urls.py  views.py
src/apps/orders/migrations/: 0001_initial.py  0002_swaprequest.py
src/apps/payments/: admin.py  models.py  serializers.py  urls.py  views.py
src/apps/payments/migrations/: 0001_initial.py
src/apps/products/: admin.py  apps.py  fixture.json  gadget_fixtures.json  models.py  signals.py
src/settings/: defaults.py
src/templates/: base.html
tests/apps/accounts/: test_accounts.py
tests/apps/cart/: test_cart.py  test_simple.py
tests/apps/orders/: test_orders.py  test_simple.py
tests/apps/payments/: __init__.py
tests/apps/products/: test_products.py
(+10 files in other folders)
